[package]
name = "gifmaker"
version = "1.0.2"
authors = ["Jia Ye <planet0104@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.79"
js-sys = "0.3.56"
gif = "0.11.3"
png = "0.17.5"
once_cell = "1.9.0"
anyhow = "1.0.55"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
panic = 'abort'