[package]
name = "scf-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
reqwest = { version = "0.11", default-features=false, features = ["json", "multipart", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
anyhow = "1.0.55"
once_cell = "1.9.0"
log = "0.4.0"
env_logger = "0.8.4"
base64 = "0.20.0-alpha.1"
serde = { version = "1", features = ["derive"] }
chrono = "0.4.19"
# aes = "0.8.1"
# cbc = "0.1.1"
# block-modes = "0.9.1"
# hex-literal = "0.3.4"
# urlencoding = "2.1.0"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
panic = 'abort'