[package]
name = "gifmaker-server"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
reqwest = { version = "0.11.10", default-features=false, features = ["json", "multipart", "rustls-tls"] }
serde_json = "1"
anyhow = "1"
futures-util = "0.3"
log = "0.4"
env_logger = "0.9.0"
base64 = "0.20.0-alpha.1"
once_cell = "1.12.0"
serde = { version = "1", features = ["derive"] }
chrono = "0.4.19"
magic-crypt = "3.1.10"
rand = "0.8.5"
config = "0.13.1"
simple-log = "1.5.1"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
panic = 'abort'