[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", default-features=false, features = ["json", "multipart", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
anyhow = "1"
rand = "0.8.5"
base64 = "0.20.0-alpha.1"
chrono = "0.4.22"
magic-crypt = "3.1.10"